@@ -1,14 +1,27 @@
 package us.ihmc.scs2.definition;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
+import org.apache.commons.lang3.mutable.MutableObject;
+import us.ihmc.scs2.definition.collision.CollisionShapeDefinition;
+import us.ihmc.scs2.definition.geometry.*;
+import us.ihmc.scs2.definition.robot.*;
+import us.ihmc.scs2.definition.state.*;
+import us.ihmc.scs2.definition.terrain.TerrainObjectDefinition;
+import us.ihmc.scs2.definition.visual.*;
+import us.ihmc.scs2.definition.yoComposite.*;
+import us.ihmc.scs2.definition.yoGraphic.*;
+import us.ihmc.scs2.definition.yoVariable.*;
+import us.ihmc.scs2.definition.yoVariable.YoEquationDefinition.EquationAliasDefinition;
+
+import javax.xml.bind.JAXBContext;
+import javax.xml.bind.JAXBException;
+import javax.xml.bind.Marshaller;
+import javax.xml.bind.Unmarshaller;
+import java.io.*;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -17,101 +30,6 @@ import java.util.Enumeration;
 import java.util.List;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
-
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
-import javax.xml.bind.Unmarshaller;
-
-import org.apache.commons.lang3.mutable.MutableObject;
-
-import us.ihmc.scs2.definition.collision.CollisionShapeDefinition;
-import us.ihmc.scs2.definition.geometry.ArcTorus3DDefinition;
-import us.ihmc.scs2.definition.geometry.Box3DDefinition;
-import us.ihmc.scs2.definition.geometry.Capsule3DDefinition;
-import us.ihmc.scs2.definition.geometry.Cone3DDefinition;
-import us.ihmc.scs2.definition.geometry.Cylinder3DDefinition;
-import us.ihmc.scs2.definition.geometry.Ellipsoid3DDefinition;
-import us.ihmc.scs2.definition.geometry.ExtrudedPolygon2DDefinition;
-import us.ihmc.scs2.definition.geometry.GeometryDefinition;
-import us.ihmc.scs2.definition.geometry.HemiEllipsoid3DDefinition;
-import us.ihmc.scs2.definition.geometry.ModelFileGeometryDefinition;
-import us.ihmc.scs2.definition.geometry.Point3DDefinition;
-import us.ihmc.scs2.definition.geometry.Polygon2DDefinition;
-import us.ihmc.scs2.definition.geometry.Polygon3DDefinition;
-import us.ihmc.scs2.definition.geometry.PyramidBox3DDefinition;
-import us.ihmc.scs2.definition.geometry.Ramp3DDefinition;
-import us.ihmc.scs2.definition.geometry.STPBox3DDefinition;
-import us.ihmc.scs2.definition.geometry.STPCapsule3DDefinition;
-import us.ihmc.scs2.definition.geometry.STPCylinder3DDefinition;
-import us.ihmc.scs2.definition.geometry.STPRamp3DDefinition;
-import us.ihmc.scs2.definition.geometry.Sphere3DDefinition;
-import us.ihmc.scs2.definition.geometry.Tetrahedron3DDefinition;
-import us.ihmc.scs2.definition.geometry.Torus3DDefinition;
-import us.ihmc.scs2.definition.geometry.TriangleMesh3DDefinition;
-import us.ihmc.scs2.definition.geometry.TruncatedCone3DDefinition;
-import us.ihmc.scs2.definition.robot.CameraSensorDefinition;
-import us.ihmc.scs2.definition.robot.CrossFourBarJointDefinition;
-import us.ihmc.scs2.definition.robot.ExternalWrenchPointDefinition;
-import us.ihmc.scs2.definition.robot.FixedJointDefinition;
-import us.ihmc.scs2.definition.robot.GroundContactPointDefinition;
-import us.ihmc.scs2.definition.robot.IMUSensorDefinition;
-import us.ihmc.scs2.definition.robot.JointDefinition;
-import us.ihmc.scs2.definition.robot.KinematicPointDefinition;
-import us.ihmc.scs2.definition.robot.LidarSensorDefinition;
-import us.ihmc.scs2.definition.robot.OneDoFJointDefinition;
-import us.ihmc.scs2.definition.robot.PlanarJointDefinition;
-import us.ihmc.scs2.definition.robot.PrismaticJointDefinition;
-import us.ihmc.scs2.definition.robot.RevoluteJointDefinition;
-import us.ihmc.scs2.definition.robot.RigidBodyDefinition;
-import us.ihmc.scs2.definition.robot.RobotDefinition;
-import us.ihmc.scs2.definition.robot.RobotStateDefinition;
-import us.ihmc.scs2.definition.robot.SensorDefinition;
-import us.ihmc.scs2.definition.robot.SixDoFJointDefinition;
-import us.ihmc.scs2.definition.robot.SphericalJointDefinition;
-import us.ihmc.scs2.definition.robot.WrenchSensorDefinition;
-import us.ihmc.scs2.definition.state.JointState;
-import us.ihmc.scs2.definition.state.OneDoFJointState;
-import us.ihmc.scs2.definition.state.PlanarJointState;
-import us.ihmc.scs2.definition.state.SixDoFJointState;
-import us.ihmc.scs2.definition.state.SphericalJointState;
-import us.ihmc.scs2.definition.terrain.TerrainObjectDefinition;
-import us.ihmc.scs2.definition.visual.ColorDefinition;
-import us.ihmc.scs2.definition.visual.MaterialDefinition;
-import us.ihmc.scs2.definition.visual.MaterialScriptDefinition;
-import us.ihmc.scs2.definition.visual.PaintDefinition;
-import us.ihmc.scs2.definition.visual.TextureDefinition;
-import us.ihmc.scs2.definition.visual.VisualDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoColorRGBADoubleDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoColorRGBAIntDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoColorRGBASingleDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoCompositeDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoOrientation3DDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoQuaternionDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoTuple2DDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoTuple3DDefinition;
-import us.ihmc.scs2.definition.yoComposite.YoYawPitchRollDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphic2DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphic3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicArrow3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicBox3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicCapsule3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicCone3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicCoordinateSystem3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicCylinder3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicEllipsoid3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicGroupDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicLine2DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicListDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicPoint2DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicPoint3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicPointcloud2DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicPointcloud3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicPolygon2DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicPolygonExtruded3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicPolynomial3DDefinition;
-import us.ihmc.scs2.definition.yoGraphic.YoGraphicSTPBox3DDefinition;
 
 public class DefinitionIOTools
 {
@@ -229,6 +147,20 @@ public class DefinitionIOTools
          classesToBeBound.add(YoQuaternionDefinition.class);
          classesToBeBound.add(YoYawPitchRollDefinition.class);
 
+         // YoVariableDefinition
+         classesToBeBound.add(YoRegistryDefinition.class);
+         classesToBeBound.add(YoVariableDefinition.class);
+         classesToBeBound.add(YoBooleanDefinition.class);
+         classesToBeBound.add(YoDoubleDefinition.class);
+         classesToBeBound.add(YoIntegerDefinition.class);
+         classesToBeBound.add(YoLongDefinition.class);
+         classesToBeBound.add(YoEnumDefinition.class);
+
+         // YoEquationDefinition
+         classesToBeBound.add(YoEquationDefinition.class);
+         classesToBeBound.add(EquationAliasDefinition.class);
+         classesToBeBound.add(YoEquationListDefinition.class);
+
          classesToBeBound.add(SessionInformationDefinition.class);
 
          definitionContext = JAXBContext.newInstance(classesToBeBound.toArray(new Class[classesToBeBound.size()]));
@@ -246,138 +178,122 @@ public class DefinitionIOTools
 
    public static YoGraphicListDefinition loadYoGraphicListDefinition(InputStream inputStream) throws JAXBException, IOException
    {
-      try
+      try (inputStream)
       {
          Unmarshaller unmarshaller = definitionContext.createUnmarshaller();
          return (YoGraphicListDefinition) unmarshaller.unmarshal(inputStream);
-      }
-      finally
-      {
-         inputStream.close();
       }
    }
 
    public static void saveYoGraphicListDefinition(OutputStream outputStream, YoGraphicListDefinition definition) throws JAXBException, IOException
    {
-      try
+      try (outputStream)
       {
          Marshaller marshaller = definitionContext.createMarshaller();
          marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
          marshaller.marshal(definition, outputStream);
       }
-      finally
-      {
-         outputStream.close();
-      }
    }
 
    public static RobotDefinition loadRobotDefinition(InputStream inputStream) throws JAXBException, IOException
    {
-      try
+      try (inputStream)
       {
          Unmarshaller unmarshaller = definitionContext.createUnmarshaller();
          RobotDefinition loadedRobot = (RobotDefinition) unmarshaller.unmarshal(inputStream);
          connectKinematicsRecursive(loadedRobot.getRootBodyDefinition());
          return loadedRobot;
       }
-      finally
-      {
-         inputStream.close();
-      }
    }
 
    public static void saveRobotDefinition(OutputStream outputStream, RobotDefinition definition) throws JAXBException, IOException
    {
-      try
+      try (outputStream)
       {
          Marshaller marshaller = definitionContext.createMarshaller();
          marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
          marshaller.marshal(definition, outputStream);
-      }
-      finally
-      {
-         outputStream.close();
       }
    }
 
    public static TerrainObjectDefinition loadTerrainObjectDefinition(InputStream inputStream) throws JAXBException, IOException
    {
-      try
+      try (inputStream)
       {
          Unmarshaller unmarshaller = definitionContext.createUnmarshaller();
          return (TerrainObjectDefinition) unmarshaller.unmarshal(inputStream);
-      }
-      finally
-      {
-         inputStream.close();
       }
    }
 
    public static void saveTerrainObjectDefinition(OutputStream outputStream, TerrainObjectDefinition definition) throws JAXBException, IOException
    {
-      try
+      try (outputStream)
       {
          Marshaller marshaller = definitionContext.createMarshaller();
          marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
          marshaller.marshal(definition, outputStream);
-      }
-      finally
-      {
-         outputStream.close();
       }
    }
 
    public static RobotStateDefinition loadRobotStateDefinition(InputStream inputStream) throws JAXBException, IOException
    {
-      try
+      try (inputStream)
       {
          Unmarshaller unmarshaller = definitionContext.createUnmarshaller();
          return (RobotStateDefinition) unmarshaller.unmarshal(inputStream);
-      }
-      finally
-      {
-         inputStream.close();
       }
    }
 
    public static void saveRobotStateDefinition(OutputStream outputStream, RobotStateDefinition definition) throws JAXBException, IOException
    {
-      try
+      try (outputStream)
       {
          Marshaller marshaller = definitionContext.createMarshaller();
          marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
          marshaller.marshal(definition, outputStream);
       }
-      finally
+   }
+
+   public static YoEquationListDefinition loadYoEquationListDefinition(InputStream inputStream) throws JAXBException, IOException
+   {
+      try (inputStream)
       {
-         outputStream.close();
+         Unmarshaller unmarshaller = definitionContext.createUnmarshaller();
+         return (YoEquationListDefinition) unmarshaller.unmarshal(inputStream);
+      }
+   }
+
+   public static void saveYoEquationListDefinition(OutputStream outputStream, List<YoEquationDefinition> definitions) throws JAXBException, IOException
+   {
+      saveYoEquationListDefinition(outputStream, new YoEquationListDefinition(definitions));
+   }
+
+   public static void saveYoEquationListDefinition(OutputStream outputStream, YoEquationListDefinition definition) throws JAXBException, IOException
+   {
+      try (outputStream)
+      {
+         Marshaller marshaller = definitionContext.createMarshaller();
+         marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
+         marshaller.marshal(definition, outputStream);
       }
    }
 
    public static SessionInformationDefinition loadSessionInformationDefinition(InputStream inputStream) throws JAXBException, IOException
    {
-      try
+      try (inputStream)
       {
          Unmarshaller unmarshaller = definitionContext.createUnmarshaller();
          return (SessionInformationDefinition) unmarshaller.unmarshal(inputStream);
-      }
-      finally
-      {
-         inputStream.close();
       }
    }
 
    public static void saveSessionInformationDefinition(OutputStream outputStream, SessionInformationDefinition definition) throws JAXBException, IOException
    {
-      try
+      try (outputStream)
       {
          Marshaller marshaller = definitionContext.createMarshaller();
          marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
          marshaller.marshal(definition, outputStream);
-      }
-      finally
-      {
-         outputStream.close();
       }
    }
 
@@ -428,9 +344,8 @@ public class DefinitionIOTools
       if (geometryDefinition == null)
          return;
 
-      if (geometryDefinition instanceof ModelFileGeometryDefinition)
+      if (geometryDefinition instanceof ModelFileGeometryDefinition modelFileGeometryDefinition)
       {
-         ModelFileGeometryDefinition modelFileGeometryDefinition = (ModelFileGeometryDefinition) geometryDefinition;
          if (modelFileGeometryDefinition.getFileName() == null)
             return;
 
@@ -531,7 +446,7 @@ public class DefinitionIOTools
    {
       Path targetParentPath = targetPath.getParent();
 
-      String internalParentPath = sourceURL.getPath().substring(sourceURL.getPath().indexOf("!") + 2, sourceURL.getPath().length());
+      String internalParentPath = sourceURL.getPath().substring(sourceURL.getPath().indexOf("!") + 2);
 
       if (internalParentPath.contains("/"))
       {
@@ -547,25 +462,26 @@ public class DefinitionIOTools
       }
 
       String jarPath = sourceURL.getPath().substring(5, sourceURL.getPath().indexOf("!"));
-      JarFile jar = new JarFile(URLDecoder.decode(jarPath, "UTF-8"));
-
-      Enumeration<JarEntry> entries = jar.entries(); //gives ALL entries in jar
-
-      while (entries.hasMoreElements())
+      try (JarFile jar = new JarFile(URLDecoder.decode(jarPath, StandardCharsets.UTF_8)))
       {
-         JarEntry nextElement = entries.nextElement();
-         String nextElementName = nextElement.getName();
+         Enumeration<JarEntry> entries = jar.entries(); //gives ALL entries in jar
 
-         if (internalParentPath != null && !nextElementName.startsWith(internalParentPath))
-            continue;
+         while (entries.hasMoreElements())
+         {
+            JarEntry nextElement = entries.nextElement();
+            String nextElementName = nextElement.getName();
 
-         if (nextElementName.equals(internalParentPath))
-            continue;
+            if (internalParentPath != null && !nextElementName.startsWith(internalParentPath))
+               continue;
 
-         if (Files.exists(targetParentPath.resolve(nextElementName)))
-            continue;
+            if (nextElementName.equals(internalParentPath))
+               continue;
 
-         Files.copy(filenameToURL(nextElementName, resourceClassLoader).openStream(), targetParentPath.resolve(nextElementName));
+            if (Files.exists(targetParentPath.resolve(nextElementName)))
+               continue;
+
+            Files.copy(filenameToURL(nextElementName, resourceClassLoader).openStream(), targetParentPath.resolve(nextElementName));
+         }
       }
    }
 
@@ -579,16 +495,16 @@ public class DefinitionIOTools
          MutableObject<IOException> thrownException = new MutableObject<>(null);
 
          Files.list(sourcePath).forEach(sourceChildPath ->
-         {
-            try
-            {
-               copyFileTree(sourceChildPath, targetPath.resolve(sourceChildPath.getFileName()));
-            }
-            catch (IOException e)
-            {
-               thrownException.setValue(e);
-            }
-         });
+                                        {
+                                           try
+                                           {
+                                              copyFileTree(sourceChildPath, targetPath.resolve(sourceChildPath.getFileName()));
+                                           }
+                                           catch (IOException e)
+                                           {
+                                              thrownException.setValue(e);
+                                           }
+                                        });
 
          if (thrownException.getValue() != null)
             throw thrownException.getValue();
